fixing navbar overlapping joomla3 navbar popovers

--- a/newsrc/code/media/com_acctexp/less/aec/navbar.less
+++ b/newsrc/code/media/com_acctexp/less/aec/navbar.less
@@ -1,5 +1,4 @@
 .aec-navbar {
-	z-index: 50;
 	margin-bottom: 0;
 	min-height: 48px;
 
@@ -57,6 +56,11 @@
 .nav-pills a {
 	line-height: 12px;
 	padding: 10px;
+}
+
+.navbar-inverse {
+	background-color: transparent;
+	border: none;
 }
 
 .aec-navbar.navbar-inverse {
